--- a/WebCam.html
+++ b/WebCam.html
@@ -18,22 +18,30 @@
         }
         #video-container {
             display: flex;
-            justify-content: space-around;
-            width: 80%;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
             margin-bottom: 20px;
         }
         video {
-            max-width: 40%;
+            max-width: 100%;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         #controls {
             display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             align-items: center;
+            width: 100%;
             margin-bottom: 20px;
         }
         #controls label {
             margin-right: 10px;
+        }
+        #controls button {
+            margin: 10px;
         }
     </style>
 </head>
@@ -88,7 +96,18 @@
         }
 
         function initializePeer() {
-            peer = new Peer(myId);
+            peer = new Peer(myId, {
+                host: 'your-peerjs-server.com',
+                port: 9000,
+                path: '/peerjs',
+                debug: 3,
+                config: {
+                    iceServers: [
+                        { urls: 'stun:stun.l.google.com:19302' },
+                        { urls: 'stun:stun1.l.google.com:19302' },
+                    ]
+                }
+            });
 
             peer.on('open', (id) => {
                 console.log('My peer ID is: ' + id);
