--- a/WebCam.html
+++ b/WebCam.html
@@ -39,6 +39,7 @@
         }
         #controls label {
             margin-right: 10px;
+            margin-bottom: 5px;
         }
         #controls button {
             margin: 10px;
@@ -56,10 +57,12 @@
             <input type="text" id="myId" readonly>
             <button id="generateMyId">Générer ID</button>
         </label>
+        <br>
         <label>
             ID de la personne à appeler :
             <input type="text" id="peerId">
         </label>
+        <br>
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
     </div>
