--- a/WebCam.html
+++ b/WebCam.html
@@ -18,31 +18,31 @@
         }
         #video-container {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
+            justify-content: space-around;
+            width: 80%;
             margin-bottom: 20px;
         }
         video {
-            max-width: 100%;
+            max-width: 40%;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         #controls {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            width: 100%;
             margin-bottom: 20px;
         }
         #controls label {
+            margin-bottom: 10px;
+        }
+        #controls input[type="text"] {
             margin-right: 10px;
-            margin-bottom: 5px;
+            padding: 5px;
         }
         #controls button {
-            margin: 10px;
+            margin-top: 10px;
+            padding: 10px;
         }
     </style>
 </head>
@@ -57,12 +57,10 @@
             <input type="text" id="myId" readonly>
             <button id="generateMyId">Générer ID</button>
         </label>
-        <br>
         <label>
             ID de la personne à appeler :
             <input type="text" id="peerId">
         </label>
-        <br>
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
     </div>
@@ -99,21 +97,11 @@
         }
 
         function initializePeer() {
-            peer = new Peer(myId, {
-                host: 'your-peerjs-server.com',
-                port: 9000,
-                path: '/peerjs',
-                debug: 3,
-                config: {
-                    iceServers: [
-                        { urls: 'stun:stun.l.google.com:19302' },
-                        { urls: 'stun:stun1.l.google.com:19302' },
-                    ]
-                }
-            });
+            peer = new Peer(myId);
 
             peer.on('open', (id) => {
                 console.log('My peer ID is: ' + id);
+                startLocalVideo();
             });
 
             peer.on('call', (call) => {
