--- a/WebCam.html
+++ b/WebCam.html
@@ -29,23 +29,11 @@
         }
         #controls {
             display: flex;
-            flex-direction: column;
             align-items: center;
             margin-bottom: 20px;
         }
         #controls label {
-            margin-bottom: 10px;
-        }
-        #controls input[type="text"] {
             margin-right: 10px;
-            padding: 5px;
-        }
-        #controls button {
-            margin-top: 10px;
-            padding: 10px;
-        }
-        #muteCheckbox {
-            margin-top: 10px;
         }
     </style>
 </head>
@@ -66,8 +54,6 @@
         </label>
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
-        <label for="muteCheckbox">Muet mon micro localement :</label>
-        <input type="checkbox" id="muteCheckbox">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -85,7 +71,6 @@
         const peerIdInput = document.getElementById('peerId');
         const localVideo = document.getElementById('localVideo');
         const remoteVideo = document.getElementById('remoteVideo');
-        const muteCheckbox = document.getElementById('muteCheckbox');
 
         // Générer un ID aléatoire pour mon ID
         generateMyIdButton.addEventListener('click', () => {
@@ -110,10 +95,10 @@
             });
 
             peer.on('call', (call) => {
-                navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' }, audio: true })
+                navigator.mediaDevices.getUserMedia({ video: true, audio: true })
                     .then((stream) => {
                         localStream = stream;
-                        localVideo.srcObject = null; // Ne pas afficher localement la vidéo
+                        localVideo.srcObject = stream;
                         call.answer(stream); // Répondre à l'appel en envoyant le flux vidéo local
                         call.on('stream', (remoteStream) => {
                             // Afficher le flux vidéo du peer distant dans une balise vidéo
@@ -131,7 +116,7 @@
             return Math.random().toString(36).substr(2, 8); // Génère une chaîne aléatoire de 8 caractères
         }
 
-        // Fonction pour démarrer l'appel à un peer
+        // Fonction pour démarrer la vidéo locale et appeler un peer
         function startCall() {
             const peerId = peerIdInput.value.trim();
             if (!peerId) {
@@ -140,10 +125,10 @@
             }
 
             // Demander l'autorisation pour le microphone et la caméra
-            navigator.mediaDevices.getUserMedia({ video: { facingMode: 'user' }, audio: true })
+            navigator.mediaDevices.getUserMedia({ video: true, audio: true })
                 .then((stream) => {
                     localStream = stream;
-                    localVideo.srcObject = null; // Ne pas afficher localement la vidéo
+                    localVideo.srcObject = stream;
                     const call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
                         // Afficher le flux vidéo du peer distant dans une balise vidéo
@@ -172,15 +157,7 @@
         // Événements des boutons
         callButton.addEventListener('click', startCall);
         hangupButton.addEventListener('click', hangUp);
-
-        // Événement pour muter/démuter le microphone localement
-        muteCheckbox.addEventListener('change', () => {
-            if (localStream) {
-                localStream.getAudioTracks().forEach(track => {
-                    track.enabled = !muteCheckbox.checked; // Activer/désactiver le track audio en fonction de la checkbox
-                });
-            }
-        });
     </script>
 </body>
 </html>
+
