--- a/WebCam.html
+++ b/WebCam.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebRTC Chat</title>
     <style>
-        /* Styles pour le positionnement et l'apparence */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -62,7 +61,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
     <script>
-        // Variables globales
         let localStream;
         let peer;
         let currentCall;
@@ -75,7 +73,6 @@
         const localVideo = document.getElementById('localVideo');
         const remoteVideo = document.getElementById('remoteVideo');
 
-        // Générer un ID aléatoire pour mon ID
         generateMyIdButton.addEventListener('click', () => {
             myId = generateRandomId();
             myIdInput.value = myId;
@@ -83,7 +80,6 @@
             initializePeer();
         });
 
-        // Charger l'ID enregistré depuis le localStorage ou générer un nouvel ID
         let myId = localStorage.getItem('chatUsername');
         if (myId) {
             myIdInput.value = myId;
@@ -102,7 +98,7 @@
                     .then((stream) => {
                         localStream = stream;
                         localVideo.srcObject = stream;
-                        call.answer(stream); // Répondre à l'appel en envoyant le flux vidéo local
+                        call.answer(stream);
                         call.on('stream', (remoteStream) => {
                             remoteVideo.srcObject = remoteStream;
                         });
@@ -115,12 +111,10 @@
             });
         }
 
-        // Fonction pour générer un ID aléatoire
         function generateRandomId() {
-            return Math.random().toString(36).substr(2, 8); // Génère une chaîne aléatoire de 8 caractères
+            return Math.random().toString(36).substr(2, 8);
         }
 
-        // Fonction pour démarrer la vidéo locale
         function getUserMedia() {
             return navigator.mediaDevices.getUserMedia({
                 video: { facingMode: 'user' },
@@ -132,12 +126,10 @@
             }).catch(handleGetUserMediaError);
         }
 
-        // Fonction pour gérer les erreurs de getUserMedia
         function handleGetUserMediaError(e) {
             console.log('getUserMedia error:', e);
         }
 
-        // Fonction pour appeler un autre peer
         callButton.addEventListener('click', () => {
             const peerId = peerIdInput.value.trim();
             if (!peerId) {
@@ -156,7 +148,6 @@
             });
         });
 
-        // Fonction pour raccrocher la connexion
         hangupButton.addEventListener('click', () => {
             if (currentCall) {
                 currentCall.close();
